modules/webgl/tests/cpp-macro-02.vs.exp
"cpp-macro-02.vs":424: L0001: Parse error:
#  line 423
intx pass;
void
main()
{
    return;
}
