modules/webgl/tests/cpp-macro-02.vs
                               #  line 423
intx pass;
void
main()
{
    return;
}
